k8-manifests/util/ingresses.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Ingress to be created in the main cluster under the release namespace
# specific to the MySQL DB based deployment of the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pos-ingress
  namespace: release-db
  annotations:
    kubernetes.io/ingress.global-static-ip-name: abm-pos-com-ip
    networking.gke.io/managed-certificates: pos-certificate
spec:
  defaultBackend:
    service:
      name: api-server-svc
      port:
        number: 8080
---
# Ingress to be created in the main cluster under the release namespace
# specific to the H2 Embedded DB based deployment of the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pos-ingress
  namespace: release-inmemory
  annotations:
    kubernetes.io/ingress.global-static-ip-name: im-abm-pos-com-ip
    networking.gke.io/managed-certificates: pos-certificate
spec:
  defaultBackend:
    service:
      name: api-server-svc
      port:
        number: 8080
---
# Ingress to be created in the main cluster under the staging namespace
# specific to the MySQL DB based deployment of the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pos-ingress
  namespace: staging-db
  annotations:
    kubernetes.io/ingress.global-static-ip-name: staging-abm-pos-com-ip
    networking.gke.io/managed-certificates: pos-certificate
spec:
  defaultBackend:
    service:
      name: api-server-svc
      port:
        number: 8080
---
# Ingress to be created in the main cluster under the staging namespace
# specific to the H2 Embedded DB based deployment of the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pos-ingress
  namespace: staging-inmemory
  annotations:
    kubernetes.io/ingress.global-static-ip-name: im-staging-abm-pos-com-ip
    networking.gke.io/managed-certificates: pos-certificate
spec:
  defaultBackend:
    service:
      name: api-server-svc
      port:
        number: 8080
